--- a/index.html
+++ b/index.html
@@ -8,20 +8,42 @@
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
   <style>
-    body { margin: 0; overflow: hidden; }
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: black;
+  }
 
-    #start {
-      position: fixed;
-      inset: 0;
-      background: black;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 22px;
-      z-index: 10;
-    }
-  </style>
+  a-scene {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    width: 100vw !important;
+    height: 100vh !important;
+  }
+
+  canvas {
+    width: 100vw !important;
+    height: 100vh !important;
+  }
+
+  #start {
+    position: fixed;
+    inset: 0;
+    background: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    z-index: 10;
+  }
+</style>
+
+  
 </head>
 
 <body>
@@ -29,11 +51,13 @@
 <div id="start">Tap once to start AR</div>
 
 <a-scene
+  renderer="precision: high; antialias: true;"
   mindar-image="imageTargetSrc: targets.mind;"
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
   embedded
 >
+
   <a-assets>
     <video
       id="vid"
@@ -73,3 +97,4 @@
 
 </body>
 </html>
+
