--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
   <a-entity mindar-image-target="targetIndex: 0">
-<a-video src="#vid" width="0.6" height="1.066"></a-video>
+<a-video
+  src="#vid"
+  width="1"
+  height="1.333"
+  position="0 0 0"
+></a-video>
   </a-entity>
 </a-scene>
 
@@ -99,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
